# FastAPI---ApiDoc

./: README.md  mydb.db  pyproject.toml  run_app.py
app/: __init__.py
app/db/: __init__.py
app/db/models/: item.py  user.py
app/routes/: __init__.py  default.py  item.py  user.py
app/schemas/: __init__.py  item.py  user.py
