[tool.poetry]
name = "fastapi-apidoc"
version = "0.1.0"
description = ""
authors = ["Leonidig <leonid200955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
